--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to the sample app for M3
-  p Production Version
+  p It is a Production Version
