--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to the sample app for M3!
+  p Welcome to the sample app for M3
   p It is a Production Version
