add home and back button

--- a/src/views/statuson.jade
+++ b/src/views/statuson.jade
@@ -2,7 +2,10 @@ extends layout
 
 block content
   h1= title
-  p This page resemble a feature of this app
+  p Feature: on
+  li
+    a(href='/manage') back
   li
     a(href='/') home
+
 
