--- a/src/views/statusunknown.jade
+++ b/src/views/statusunknown.jade
@@ -2,7 +2,9 @@ extends layout
 
 block content
   h1= title
-  p This page resemble a feature of this app
+  p Feature: unknown
+  li
+    a(href='/manage') back
   li
     a(href='/') home
 
